--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "composer/installers": "^2.0",
         "drupal/core-composer-scaffold": "^10",
         "drupal/core-recommended": "^10",
-        "drush/drush": "^12"
+        "drupal/redis": "^1.7",
+        "drush/drush": "^12",
+        "platformsh/config-reader": "^2.4"
     },
     "require-dev": {
         "drupal/core-dev": "^10"
