--- a/.platform/.platform.app.yaml
+++ b/.platform/.platform.app.yaml
@@ -2,6 +2,10 @@ name: app
 type: 'php:8.1'
 disk: 2048
 
+dependencies:
+    php:
+        composer/composer: "^2"
+
 hooks:
     build: |
         set -e
