--- a/.platform/.platform.app.yaml
+++ b/.platform/.platform.app.yaml
@@ -4,12 +4,11 @@ disk: 2048
 
 dependencies:
     php:
-        composer/composer: "^2"
+        composer: "^2"
 
 hooks:
     build: |
         set -e
-        cd $PLATFORM_APP_DIR     # Change directory to the root of your application
         composer install --prefer-dist --no-progress --no-interaction
 
 web:
