--- a/.platform/.platform.app.yaml
+++ b/.platform/.platform.app.yaml
@@ -1,25 +1,13 @@
 name: app
-type: 'php:8.1'
-disk: 2048
+type: 'php:8.0'
 
-dependencies:
-    php:
-        composer/composer: "^2"
-
-hooks:
-    build: |
-        set -e
-        composer install --prefer-dist --no-progress --no-interaction
+# The build flavor determines how Platform.sh builds your app.
+build:
+  flavor: composer
 
 web:
-    locations:
-        "/":
-            root: "web"
-            passthru: "/index.php"
-            index:
-                - index.php
-                - index.html
-
-relationships:
-    database: "db:mysql"
-    redis: "redis:redis"
+  locations:
+    "/":
+      root: "public"
+      index: ["index.php"]
+      allow: true
