update platform conf

--- a/.platform/.platform.app.yaml
+++ b/.platform/.platform.app.yaml
@@ -11,3 +11,7 @@ web:
       root: "public"
       index: ["index.php"]
       allow: true
+
+relationships:
+    database: "db:mysql"
+    redis: "redis:redis"
