--- a/.platform/app.yaml
+++ b/.platform/app.yaml
@@ -9,6 +9,7 @@ dependencies:
 hooks:
     build: |
         set -e
+        cd $PLATFORM_APP_DIR     # Change directory to the root of your application
         composer install --prefer-dist --no-progress --no-interaction
 
 web:
